refactor: Update app name and favicon
Updates the application title, favicon, and system names to reflect the rebranding from "SorteAI" to "GamerBox Triad3". This change unifies the branding across the application.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="https://aisfizoyfpcisykarrnt.supabase.co/storage/v1/object/public/imagens/LOGO%20TRIAD3%20.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sorteador de Eventos</title>
+  <title>GamerBox Triad3</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
